--- a/Gradient Boosting Case Study.ipynb
+++ b/Gradient Boosting Case Study.ipynb
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1424,7 +1424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUC is: 0.85, rounded to two decimal places\n"
+      "AUC is: 0.85427\n"
      ]
     },
     {
@@ -1452,7 +1452,7 @@
     "auc = roc_auc_score(y_test, y_scores)\n",
     "\n",
     "# Print the AUC\n",
-    "print(f\"AUC is: {auc:.5f}, rounded to two decimal places\")\n",
+    "print(f\"AUC is: {auc:.5f}\")\n",
     "\n",
     "# Plot the ROC curve\n",
     "plt.figure(figsize=(8, 6))\n",
